css/admin-theme.css
/* ... */
/* checkbox spacing */ 
.gin--dark-mode .js-form-type-checkbox.form-type--checkbox {
  padding: 0.5rem;
}

/* Sections on nodes */
.layout-builder .layout-builder__add-section {
  position: relative;
  background-color: hsl(180, 7%, 90%);
  padding: 1rem 2rem;
  margin: 2rem 1rem;
  max-width: calc(100% - 2rem);
}

.layout-builder__link--configure {
  color: var(--dark-theme-gray);
}

.layout-builder__link--add-section-to-library,
.layout-builder__link--remove {
  background-color: var(--dark-theme-gray-hover);
}

.layout-builder__section:not(.gin-lb--disable-section-focus)::after {
  border: 0.35rem solid  hsl(180, 7%, 75%) !important;
  position: absolute;
  content: '';
  width: 100%;
  height: 100%;
  left: 0;
  top: 0;
}

.layout-builder__section:not(.gin-lb--disable-section-focus):hover::after {
  border: 0.35rem solid  hsl(180, 7%, 20%) !important;
}

.layout-builder__section {
  margin: 2rem 1rem;
}

.layout-builder__section .js-layout-builder-region {
  padding: 1rem;
}

/* Make the secondary toolbar fixes */
.gin-secondary-toolbar--frontend {
  position: fixed;
  background-color: var(--gin-bg-layer);
  width: 100%;
  top: calc(var(--gin-toolbar-secondary-height) - 7px) !important;
}

/* Layout builder modal */
.ws-lb-link__label {
  color: var(--dark-theme-gray) !important;
}

.gin--dark-mode .form-element,
.gin--dark-mode .glb-form-element {
  background-color: var(--gin-bg-layer2) !important;
}

/* remove media button */
.gin--dark-mode .media-library-add-form__remove-button {
  background-color: var(--robin-egg);
  color: var(--darkest-gray);
}

.gin--dark-mode .ui-dialog-titlebar {
  background: var(--darkest-gray);
}

.gin--dark-mode .field-multiple-table h4 {
  color: var(--wool);
}

/* Embed component */
.gin--dark-mode .ui-dialog .ui-widget-content.ui-dialog-content h2 {
  color: var(--wool);
}

.gin--dark-mode .ui-dialog .ui-widget-content.ui-dialog-content .js-form-wrapper.form-wrapper {
  padding: 1rem;
}

.gin--dark-mode .ui-dialog .ui-widget-content.ui-dialog-content .js-form-wrapper.form-wrapper[open] {
  word-break: break-all;
  background-color: var(--darkest-gray);
}

/* yalb-1261 - fix hover color on table */
.layout-builder-components-table__block-label {
  color: var(--dark-theme-gray-hover);
  background-color: var(--wool);
}
.layout-builder-components-table__block-label:hover {
  color: var(--dark-theme-gray-hover);
  text-decoration: underline;
}

.layout-builder-components-table th {
  color: var(--wool);
  background-color: var(--darkest-gray);
}

.layout-builder-components-table th:hover {
  color: var(--wool);
  background-color: var(--darkest-gray);
}
.layout-builder-components-table tr:nth-child(2n) {
  background-color: var(--dark-theme-gray);
}
.layout-builder-components-table tr:hover {
  color: var(--dark-theme-gray);
  background-color: var(--wool);
}

.layout-builder-components-table__block-label--current,
.layout-builder-components-table__block-label--current:hover {
  color: var(--wool);
  background-color: var(--dark-theme-gray-hover);
}

/* yalb-1251 - AX: pencil icon difficulty editing blocks */
/* change the contextual pencil icon to the left-hand side of each component
// instead of the right
*/
.layout-builder-block.contextual-region .contextual {
  display: flex;
  flex-direction: column;
  top: 1rem;
  left: 2vw;
  right: auto;
  width: auto;
}

@media only screen and (min-width: 2200px) {
  .layout-builder-block.contextual-region .contextual {
    left: 15vw;
  }
}

@media only screen and (min-width: 2500px) {
  .layout-builder-block.contextual-region .contextual {
    left: 20vw;
  }
}

.layout-builder-block.contextual-region .contextual .contextual-links {
  left: 0;
  right: 0;
  float: unset;
}

/* increase the size of the clickable/hoverable area */
.layout-builder-block.contextual-region .contextual .trigger {
  width: 50px !important;
  height: 50px !important;
}

/* increase the size of the icon itself */
.layout-builder-block.contextual-region .contextual .trigger::before {
  width: 1.2rem;
  height: 1.2rem;
  mask-size: 1.2rem;
  -webkit-mask-size: 1.2rem;
}

/* two-column layout edit adjustments */
.yds-two-column .layout-builder-block.contextual-region .contextual {
  left: 0;
}

@media only screen and (min-width: 2200px) {
  .yds-two-column .layout-builder-block.contextual-region .contextual  {
    left: -1vw;
  }
}

@media only screen and (min-width: 2500px) {
  .yds-two-column .layout-builder-block.contextual-region .contextual  {
    left: -1vw;
  }
}


/* add min-height so that smaller (in height) components are more easily
// able to be interacted with - e.g. `divider`
*/
.layout-builder-block {
  min-height: 6rem;
}

/* increase padding around the divider when in layout-builder, to make the
// divider more visible
*/
.layout-builder-block .divider__wrapper {
  display: flex;
  align-items: center;
  padding-inline: 2rem;
}


/* Blocks - accordion block, button block */
.field--name-field-accordion-items th h4,
.field--name-field-button-link th h4 {
  color: var(--wool) !important;
}

/* Gin tables */
.glb-table tr:nth-child(2n) {
  background-color: var(--dark-theme-gray);
}

.js .paragraphs-description .summary-content {
  color: var(--wool);
}

.field-multiple-drag.tabledrag-cell {
  background-color: var(--wool);
}


/* chosen overrides */
.gin--dark-mode .chosen-container .chosen-results li.highlighted {
  background-color: var(--gin-color-primary);
  color: var(--darkest-gray);
}

.gin--dark-mode .chosen-container-single .chosen-single span {
  color: var(--wool);
}

/* .gin--dark-mode .chosen-search-input,
.gin--dark-mode .chosen-search-input::placeholder {
  color: var(--dark-theme-gray) !important;
} */

/* search input placeholder opacity */
input[type="search"]::placeholder {
  opacity: 1;
}

.gin--dark-mode .ui-autocomplete {
  background-color: var(--darkest-gray);
}

.gin--dark-mode #drupal-off-canvas .ui-autocomplete .ui-menu-item-wrapper:hover {
  color: var(--darkest-gray) !important;
}
/* ... */

